kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: abc-technologies

  labels:
    istio-injection: enabled
